<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_sound1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_sound_1" />

    <Button
        android:id="@+id/button_sound2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_sound_2" />

    <Button
        android:id="@+id/button_sound3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_sound_3" />

    <Button
        android:id="@+id/button_sound4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_sound_4" />

    <Button
        android:id="@+id/button_sound5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_sound_5" />

    <Button
        android:id="@+id/button_sound6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_sound_6" />

</LinearLayout>